--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"E:\\JDK","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\Weiheng Lian\\Desktop\\algorithms\\leetcode\\LeetCode","type":"PROJECT","hints":{"PROJECT_NAME":"LeetCode"}},"ABSENT"]]
